--- a/carousel/BD_BIC/formulario_pecas.html
+++ b/carousel/BD_BIC/formulario_pecas.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Formulário Peças</title>
+    <style>
+        .tipo-section{
+            margin: 2em 0;
+        }
+        h3{
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
 
@@ -21,7 +29,7 @@
             <!-- Preço -->
             <div>
                 <label>Preço da peça:</label>
-                <input type="number" name="preco">
+                <input type="number" step="0.01" name="preco">
             </div>
 
             <!-- Tamanho -->
@@ -35,9 +43,27 @@
             </div>
 
             <!-- Tipo -->
-            <div>
-                <label>Tipo da peça:</label>
-                <input type="text" name="tipo">
+            <div class="tipo-section">
+                <h1>Tipo da peça:</h1>
+                <div class="tipo-divider">
+                    <h3>Parte de cima</h3>
+                    <input name="tipo" type="radio" value="camisa">Camisa
+                    <input name="tipo" type="radio" value="cropped">Cropped
+                    <input name="tipo" type="radio" value="top">Top
+                    <input name="tipo" type="radio" value="moletom">Moletom
+                </div>
+                <div class="tipo-divider">
+                    <h3>Parte de baixo</h3>
+                    <input name="tipo" type="radio" value="calca">Calça
+                    <input name="tipo" type="radio" value="short">Short
+                    <input name="tipo" type="radio" value="bermuda">Bermuda
+                    <input name="tipo" type="radio" value="bermuda">Saia
+                </div>
+                <div class="tipo-divider">
+                    <h3>Corpo inteiro</h3>
+                    <input name="tipo" type="radio" value="vestido">Vestido
+                    <input name="tipo" type="radio" value="macacao">Macacão
+                </div>
             </div>
 
             <!-- Cor -->
@@ -50,14 +76,6 @@
             <div>
                 <label>Descrição da peça:</label>
                 <textarea name="descricao"></textarea>
-            </div>
-
-            <!-- Posição -->
-            <div>
-                <label>Posição da peça:</label>
-                <input type="radio" name="posicao" value="0"><label>Parte de cima</label>
-                <input type="radio" name="posicao" value="1"><label>Parte de baixo</label>
-                <input type="radio" name="posicao" value="2"><label>Corpo todo</label>
             </div>
 
             <!-- Marca -->
